<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/winText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/wins"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
                <TextView
                    android:id="@+id/wins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/loseText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/losses"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
                <TextView
                    android:id="@+id/losses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/drawsText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/draw"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
                <TextView
                    android:id="@+id/draws"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/blackjackText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/blackjacks"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
                <TextView
                    android:id="@+id/blackjacks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/stats_text_size"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Dealer's Hand:"
                android:textColor="@android:color/black"
                android:paddingRight="12dp"/>
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/dealer_deck"></LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/player_deck"
                android:gravity="bottom"></LinearLayout>

        </HorizontalScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <Button
            android:id="@+id/deal_btn"
            android:layout_height="72dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/deal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="deal"/>

        <Button
            android:id="@+id/hit_btn"
            android:layout_height="72dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/hit"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="hit"
            android:visibility="gone"/>

        <Button
            android:id="@+id/stay_btn"
            android:layout_height="72dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/stay"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:onClick="stay"
            android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
